feat: add user view endpoint
