# src/storage/api-docs/api-docs.json
@@ -13,12 +13,12 @@
     },
     "servers": [
         {
-            "url": "http://localhost:8080/api/v1/",
+            "url": "http://localhost:8080",
             "description": "Laravel Swagger API server"
         }
     ],
     "paths": {
-        "/user/create": {
+        "/api/v1/user/create": {
             "post": {
                 "tags": [
                     "User"
@@ -170,6 +170,37 @@
                     }
                 ]
             }
+        },
+        "/api/v1/user": {
+            "get": {
+                "tags": [
+                    "User"
+                ],
+                "summary": "View a User account",
+                "operationId": "user-read",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "404": {
+                        "description": "Page not found"
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity"
+                    },
+                    "500": {
+                        "description": "Internal server error"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
         }
     },
     "components": {
@@ -178,6 +209,14 @@
                 "type": "apiKey",
                 "name": "X-APP-ID",
                 "in": "header"
+            },
+            "bearerAuth": {
+                "type": "http",
+                "description": "Login with email and password to get the authentication token",
+                "name": "Token based Based",
+                "in": "header",
+                "bearerFormat": "JWT",
+                "scheme": "bearer"
             }
         }
     }
